--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Variables */
 :root {
   --color-primary: #121212;
   --color-secondary: #1e1e1f;
+  --color-ternary: #383838;
   --color-light: #fafafa;
   --color-body: #c0c0c0;
   --color-yellow: #f2d06b;
   --color-subtle: #868687;
-  --color-light: #383838;
 }
 
 body {
@@ -18,13 +19,97 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Background Color Utilities */
+.bg-primary {
+  background-color: var(--color-primary);
+}
+.bg-secondary {
+  background-color: var(--color-secondary);
+}
+.bg-ternary {
+  background-color: var(--color-ternary);
+}
+.bg-light {
+  background-color: var(--color-light);
+}
+.bg-body {
+  background-color: var(--color-body);
+}
+.bg-yellow {
+  background-color: var(--color-yellow);
+}
+.bg-subtle {
+  background-color: var(--color-subtle);
+}
+
+/* Text Color Utilities */
+.text-primary {
+  color: var(--color-primary);
+}
+.text-secondary {
+  color: var(--color-secondary);
+}
+.text-ternary {
+  color: var(--color-ternary);
+}
+.text-light {
+  color: var(--color-light);
+}
+.text-body {
+  color: var(--color-body);
+}
+.text-yellow {
+  color: var(--color-yellow);
+}
+.text-subtle {
+  color: var(--color-subtle);
+}
+
+/* Border Color Utilities */
+.border-primary {
+  border-color: var(--color-primary);
+}
+.border-secondary {
+  border-color: var(--color-secondary);
+}
+.border-ternary {
+  border-color: var(--color-ternary);
+}
+.border-light {
+  border-color: var(--color-light);
+}
+.border-body {
+  border-color: var(--color-body);
+}
+.border-yellow {
+  border-color: var(--color-yellow);
+}
+.border-subtle {
+  border-color: var(--color-subtle);
+}
+
 .card {
   border-radius: 20px;
   padding: 25px;
-  border: 1px solid var(--color-light);
+  border: 1px solid var(--color-ternary);
   overflow-x: hidden;
   overflow-y: auto;
   min-height: 100px;
   height: fit-content;
   background-color: var(--color-secondary);
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  --_c: no-repeat radial-gradient(farthest-side, #e0f0ee 92%, #0000);
+  background: var(--_c) top, var(--_c) left, var(--_c) right, var(--_c) bottom;
+  background-size: 12px 12px;
+  animation: l7 1s infinite;
+}
+@keyframes l7 {
+  to {
+    transform: rotate(0.5turn);
+  }
 }
